WikimediaUI theme: Fix regression on SelectFileWidget icon/indicator visibility
Fixing regression that happened somewhere between
I9d0cbf5d069 and I84447dd66b4 resulting in icons/indicators not being visible
even if set.

--- a/src/themes/wikimediaui/widgets.less
+++ b/src/themes/wikimediaui/widgets.less
@@ -1363,7 +1363,6 @@
 		border-right-width: 0;
 
 		> .oo-ui-iconElement-icon {
-			display: none;
 			top: -@border-width-base; // Address `border-top` of parent element
 			left: @padding-horizontal-input-text;
 			min-height: @min-height-widget-base;
@@ -1371,7 +1370,6 @@
 		}
 
 		> .oo-ui-indicatorElement-indicator {
-			display: none;
 			top: -@border-width-base; // Address `border-top` of parent element
 			right: @padding-horizontal-base;
 			min-height: @min-height-widget-base;
